--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,4 @@
-index:
-  path: /
-  controller: App\Controller\TestController::index
-
+# index:
+#   path: /
+#   controller: App\Controller\TestController::index
 
