--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "bluemmb/faker-picsum-photos-provider": "^2.0",
         "cocur/slugify": "^4.1",
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "liorchamla/faker-prices": "^2.0",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -17,6 +19,7 @@
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/proxy-manager-bridge": "5.1.*",
+        "symfony/string": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -70,6 +73,6 @@
         }
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.9"
+        "fakerphp/faker": "1.13"
     }
 }
