--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.38",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "5.1.*",
         "symfony/string": "5.1.*",
         "symfony/twig-bundle": "5.1.*",
@@ -73,6 +74,9 @@
         }
     },
     "require-dev": {
-        "fakerphp/faker": "1.13"
+        "fakerphp/faker": "1.13",
+        "symfony/debug-bundle": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     }
 }
