--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,5 @@ twig:
     - bootstrap_4_layout.html.twig
   globals:
     categoryRepository: "@App\\Repository\\CategoryRepository"
+    cartService: "@App\\Cart\\CartService"
+    productRepository: "@App\\Repository\\ProductRepository"
