--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "liorchamla/faker-prices": "^2.0",
+        "nelmio/cors-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^6.2",
+        "stripe/stripe-php": "^7.121",
         "symfony/apache-pack": "^1.0",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
