Mise en place des evenement

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -48,3 +48,22 @@ services:
     arguments:
       $publicKey: "%env(STRIPE_PUBLIC_KEY)%"
       $secretKey: "%env(STRIPE_SECRET_KEY)%"
+
+  # App\EventDispatcher\PrenomListener:
+  #   tags:
+  #     [
+  #       {
+  #         name: kernel.event_listener,
+  #         event: kernel.request,
+  #         method: addPrenomToAttributes,
+  #       },
+  #       {
+  #         name: kernel.event_listener,
+  #         event: kernel.controller,
+  #         method: test1,
+  #       },
+  #       { name: kernel.event_listener, event: kernel.response, method: test2 },
+  #     ]
+
+  # App\EventDispatcher\PrenomSubscriber:
+  #   autoconfigure: false
