--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,11 @@
         "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "fakerphp/faker": "1.13",
+        "symfony/debug-bundle": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -81,9 +85,6 @@
         }
     },
     "require-dev": {
-        "fakerphp/faker": "1.13",
-        "symfony/debug-bundle": "5.1.*",
-        "symfony/stopwatch": "5.1.*",
-        "symfony/web-profiler-bundle": "5.1.*"
+
     }
 }
