--- a/composer.json
+++ b/composer.json
@@ -83,7 +83,6 @@
     "require-dev": {
         "fakerphp/faker": "1.13",
         "symfony/debug-bundle": "5.1.*",
-        "symfony/stopwatch": "5.1.*",
-        "symfony/web-profiler-bundle": "5.1.*"
+        "symfony/stopwatch": "5.1.*"
     }
 }
