--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "heroku-postbuild": "node_modules/.bin/encore production"
         },
         "post-install-cmd": [
             "@auto-scripts"
