ajout env en prod

--- a/composer.json
+++ b/composer.json
@@ -62,11 +62,10 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "heroku-postbuild": "node_modules/.bin/encore production"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
-
+            "@auto-scripts"
         ],
         "post-update-cmd": [
             "@auto-scripts"
